--- a/styl.css
+++ b/styl.css
@@ -8,7 +8,7 @@
   a{ color: inherit; text-decoration: none;}
 
   .back{
-    background: url("images/columns1.jpg") no-repeat center;
+    background: url("images/columns1.JPG") no-repeat center;
     background-size: cover;
     border-bottom: 2px solid rgba(100, 149, 237, 0.7);
   }
