--- a/BN2/style_login.css
+++ b/BN2/style_login.css
@@ -9,7 +9,7 @@ body{
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background: url("../images/bt.jpg") no-repeat center;
+  background: url("../images/bt.JPG") no-repeat center;
   background-size: cover;
 }
 
